@@ -1,5 +1,11 @@
 Changes with Apache 2.0.25-dev
 
+  *) Introduce the map_to_storage hook, which allows modules to bypass
+     the directory_walk and file_walk for non-file requests.  TRACE
+     shortcut moved to http_protocol.c as APR_HOOK_MIDDLE, and the
+     directory_walk/file_walk happen as APR_HOOK_VERY_LAST in core.c.
+     [William Rowe]
+
   *) Add the ability for mod_include to add the INCLUDES filter
      if the file is configured for the server-parsed handler.
      This makes the configuration for .shtml files much easier
